// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`should update dependency version literal when no updates are necessary 1`] = `
"{
  "lockfileVersion": 0,
  "workspaces": {
    "": {
      "dependencies": {
        "no-deps": "1.0.0",
      },
    },
    "packages/pkg1": {
      "name": "pkg1",
      "dependencies": {
        "a-dep": "1.0.1",
      },
    },
  },
  "packages": {
    "a-dep": ["a-dep@1.0.1", "http://localhost:1234/a-dep/-/a-dep-1.0.1.tgz", {}, "sha512-6nmTaPgO2U/uOODqOhbjbnaB4xHuZ+UB7AjKUA3g2dT4WRWeNxgp0dC8Db4swXSnO5/uLLUdFmUJKINNBO/3wg=="],

    "no-deps": ["no-deps@1.0.0", "http://localhost:1234/no-deps/-/no-deps-1.0.0.tgz", {}, "sha512-v4w12JRjUGvfHDUP8vFDwu0gUWu04j0cv9hLb1Abf9VdaXu4XcrddYFTMVBVvmldKViGWH7jrb6xPJRF0wq6gw=="],

    "pkg1": ["pkg1@workspace:packages/pkg1", { "dependencies": { "a-dep": "1.0.1" } }],
  }
}
"
`;

exports[`should update dependency version literal when no updates are necessary 2`] = `
"{
  "lockfileVersion": 0,
  "workspaces": {
    "": {
      "dependencies": {
        "no-deps": "^1.0.0",
      },
    },
    "packages/pkg1": {
      "name": "pkg1",
      "dependencies": {
        "a-dep": "1.0.1",
      },
    },
  },
  "packages": {
    "a-dep": ["a-dep@1.0.1", "http://localhost:1234/a-dep/-/a-dep-1.0.1.tgz", {}, "sha512-6nmTaPgO2U/uOODqOhbjbnaB4xHuZ+UB7AjKUA3g2dT4WRWeNxgp0dC8Db4swXSnO5/uLLUdFmUJKINNBO/3wg=="],

    "no-deps": ["no-deps@1.0.0", "http://localhost:1234/no-deps/-/no-deps-1.0.0.tgz", {}, "sha512-v4w12JRjUGvfHDUP8vFDwu0gUWu04j0cv9hLb1Abf9VdaXu4XcrddYFTMVBVvmldKViGWH7jrb6xPJRF0wq6gw=="],

    "pkg1": ["pkg1@workspace:packages/pkg1", { "dependencies": { "a-dep": "1.0.1" } }],
  }
}
"
`;

exports[`should update dependency version literal when no updates are necessary 3`] = `
"{
  "lockfileVersion": 0,
  "workspaces": {
    "": {
      "dependencies": {
        "no-deps": "^1.0.0",
      },
    },
    "packages/pkg1": {
      "name": "pkg1",
      "dependencies": {
        "a-dep": "^1.0.1",
      },
    },
  },
  "packages": {
    "a-dep": ["a-dep@1.0.1", "http://localhost:1234/a-dep/-/a-dep-1.0.1.tgz", {}, "sha512-6nmTaPgO2U/uOODqOhbjbnaB4xHuZ+UB7AjKUA3g2dT4WRWeNxgp0dC8Db4swXSnO5/uLLUdFmUJKINNBO/3wg=="],

    "no-deps": ["no-deps@1.0.0", "http://localhost:1234/no-deps/-/no-deps-1.0.0.tgz", {}, "sha512-v4w12JRjUGvfHDUP8vFDwu0gUWu04j0cv9hLb1Abf9VdaXu4XcrddYFTMVBVvmldKViGWH7jrb6xPJRF0wq6gw=="],

    "pkg1": ["pkg1@workspace:packages/pkg1", { "dependencies": { "a-dep": "^1.0.1" } }],
  }
}
"
`;

exports[`should write plaintext lockfiles 1`] = `
"{
  "lockfileVersion": 0,
  "workspaces": {
    "": {
      "name": "test-package",
      "dependencies": {
        "dummy-package": "file:./bar-0.0.2.tgz",
      },
    },
  },
  "packages": {
    "dummy-package": ["bar@./bar-0.0.2.tgz", {}],
  }
}
"
`;

exports[`should escape names 1`] = `
"{
  "lockfileVersion": 0,
  "workspaces": {
    "": {
      "name": "quote-in-dependency-name",
    },
    "packages/\\"": {
      "name": "\\"",
    },
    "packages/pkg1": {
      "name": "pkg1",
      "dependencies": {
        "\\"": "*",
      },
    },
  },
  "packages": {
    "\\"": ["\\"@workspace:packages/\\"", {}],

    "pkg1": ["pkg1@workspace:packages/pkg1", { "dependencies": { "\\"": "*" } }],
  }
}
"
`;
